# fastbook

./: .gitattributes  .gitignore  README.md  how-neural-net-works.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
models/: cat.pkl  dog.pkl
notebooks/: 01_intro.ipynb
