[tool.poetry]
name = "fastbook"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastai = "^2.7.11"
nbdev = "^2.3.12"
jupyterlab = "^3.6.1"
ipywidgets = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
